data/resources/stylesheet/stylesheet.css
/* ... */
.listbox-background {
    background-color: transparent;
}

.row {
    border-radius: 6px;
    background: transparent;
    transition: all 115ms ease-in-out;
}

.row:hover {
    background-color: transparent;
}

.row:selected {
    background-color: transparent;
}

.row.activatable:hover {
    background-color: transparent;
}

.row.activatable:active {
    background-color: transparent;
}

.row.activatable:selected {
    background-color: transparent;
}

.font-weight-500 {
    font-weight: 500;
}

.card.selected {
    margin-bottom: 12px;
    margin-top: 12px;
    padding-left: 6px;
    padding-top: 3px;
    padding-right: 3px;
    padding-bottom: 6px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.12),
              0 1px 3px rgba(0, 0, 0, 0.08);
}

.theme-dark .card.selected {
    box-shadow: 0 0 0 1px @item_border_color,
                0 2px 4px rgba(0, 0, 0, 0.25);
}

.theme-dark-blue .card.selected {
    box-shadow: 0 0 0 1px @item_border_color,
                0 2px 4px rgba(42, 48, 58, 0.35);
}

.bg-transparent {
    background: transparent;
}

.line-through {
    text-decoration: line-through;
    text-decoration-color: transparent;
    transition: text-decoration-color 400ms cubic-bezier(0.4, 0.0, 0.2, 1),
                color 300ms ease-out;
    animation: animate-strikethrough 500ms cubic-bezier(0.4, 0.0, 0.2, 1) forwards;
    animation-delay: 100ms;
}

.underline {
    text-decoration: underline;
}

.complete-animation {
    background-color: @selected_color;
    border-radius: 9px;
}

.priority-1-color check {
    box-shadow: inset 0 0 0 1px #ff7066;
    background: rgba(255, 112, 102, 0.1);
}

.priority-1-icon {
    color: #ff7066;
}

.priority-2-icon {
    color: #ff9a14;
}

.priority-3-icon {
    color: #5297ff;
}

.priority-1-button image {
    color: #ff7066;
}

.priority-2-button image {
    color: #ff9a14;
}

.priority-3-button image {
    color: #5297ff;
}

.priority-2-color check {
    box-shadow: inset 0 0 0 1px #ff9a14;
    background: rgba(255, 154, 20, 0.1);
}

.priority-3-color check {
    box-shadow: inset 0 0 0 1px #5297ff;
    background: rgba(82, 151, 255, 0.1);
}

.priority-4-color check {
    box-shadow: inset 0 0 0 2px @borders;
    background: transparent;
}

.priority-color {
    padding: 0;
}

.priority-color check:checked {
    background-image: linear-gradient(to bottom, shade(#ff7800, 1.2), #ff7800);
    border-color: shade(#ff7800, 0.9);
    box-shadow: inset 0 0 0 1px shade(#ff7800, 1.15),
        inset 0 1px 0 0 shade(#ff7800, 1.3), 0 1px 1px 0 shade(@bg_color, 0.85);
    color: #fff;
    -gtk-icon-source: -gtk-icontheme("checkmark-small-symbolic");
    -gtk-icon-shadow: 0 1px 1px shade(#ff7800, 0.85);
}

.today-grid {
    background-color: alpha(#16af54, 0.15);
    border-radius: 6px;
    color: #16af54;
    padding: 3px 6px;
    font-weight: bold;
}

.today-color {
    color: #16af54;
}

.upcoming-grid {
    background-color: @upcoming_bg_color;
    border-radius: 6px;
    padding: 3px 6px;
    color: @upcoming_fg_color;
    font-weight: bold;
}

.upcoming-color {
    color: #9141ac;
}

.overdue-grid {
    background-color: alpha(#fa1955, 0.125);
    border-radius: 6px;
    padding: 3px 6px;
    color: #fa1955;
    font-weight: bold;
}

.overdue-color {
    color: #fa1955;
}

.completed-grid {
    background-color: alpha(#ff7800, 0.15);
    border-radius: 6px;
    color: #ff7800;
    padding: 3px 6px;
    font-weight: bold;
}

.completed-image-color,
.completed-color image {
    color: #ff7800;
}

.is_loading image {
    animation: spin-loading 1000ms linear infinite;
}

.popover-contents contents {
    padding: 0;
}

.circle-color {
    background: alpha(@colorAccent, 0.25);
    border: 2px solid @colorAccent;
    border-radius: 50%;
}

.item-label-child {
    background-color: alpha(@colorAccent, 0.125);
    border-radius: 6px;
    padding: 3px 6px;
    color: @colorAccent;
    font-weight: bold;
}

.description-box {
    background: alpha(@item_border_color, 0.25);
    padding: 0px 6px;
    border-radius: 6px;
}

.checkbutton-label label {
    margin-left: 6px;
}

.circular-check check {
    border-radius: 50%;
}

.small-button {
    font-size: 0.85em;
    padding: 0px 12px;
}

.pane-due-button {
    background-color: @upcoming_bg_color;
    border-radius: 6px;
    padding: 3px 6px;
    color: @upcoming_fg_color;
    font-weight: 500;
}

.icon-animation-dropshadow,
.icon-animation-dropshadow image {
    animation-name: breathing;
    animation-duration: 3s;
    animation-timing-function: ease-out;
    animation-iteration-count: infinite;
    animation-direction: normal;
    animation-delay: 0s;
    animation-fill-mode: none;
    animation-play-state: running;
}

.calendar {
    background: transparent;
    border: none;
}

.calendar header {
    border: none;
}

.day-name {
    font-weight: 700;
    opacity: 0.8;
    padding-bottom: 0.5em;
    padding-top: 0.5em;
}

.circular-check {
    padding: 0;
}

.fancy-turn-animation,
.fancy-turn-animation image {
    animation: fancy-turn 0.7s ease-in-out;
}

.fancy-bounce-turn-animation,
.fancy-bounce-turn-animation image {
    animation: fancy-bounce-turn 0.7s ease-in-out;
}

.priority-pulse-animation {
    border-radius: 50%;
    animation: priority-pulse 0.6s ease-out;
}

.pb-6 {
    padding-bottom: 6px;
}

.switch-min slider {
    min-height: 16px;
    min-width: 16px;
}

.close-button {
    border-radius: 50%;
    padding: 0px;
}

.min-height-0 {
    min-height: 0;
}

.no-font-bold {
    font-weight: normal;
}

/*
* Theme Selector
*/

.theme-selector {
    margin: 9px;
}

.theme-selector {
    padding: 0;
    min-height: 44px;
    min-width: 44px;
    padding: 1px;
    background-clip: content-box;
    border-radius: 9999px;
    box-shadow: inset 0 0 0 1px @borders;
}

.theme-selector.light:checked,
.theme-selector.dark:checked,
.theme-selector.dark-blue:checked {
    box-shadow: inset 0 0 0 2px @theme_selected_bg_color;
}

.theme-selector.light {
    background-color: #ffffff;
}
/* ... */

